# projectionlaserscanner

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: calibrate.h  laserscanner.h  pointcloud.h
paper/: Makefile  bibliography.bib  llncs.lyx  llncs.tex  main.tex  plscanner.fls  plscanner.tex  ref.bib
paper/figures/: pipeline.pages
paper/sections/: approach.tex  conclusion.tex  evaluation-comparison.tex  introduction.tex  relatedwork.tex  results.tex
paper/sections/approach/: camera-calibration.tex  data-acquisition.tex  generate-pointcloud.tex  registration.tex  search-laser.tex
src/: calibrate.cpp  laserscanner.cc  pointcloud.cc  readme.txt  transforms.cc  transforms.h
